--- a/locales/es.json
+++ b/locales/es.json
@@ -61,7 +61,7 @@
                 "gcp",
                 "github",
                 "jira",
-                "rabbit"
+                "rabbitmq"
             ]
         },
         {
